--- a/web/src/main/webapp/pranay.zul
+++ b/web/src/main/webapp/pranay.zul
@@ -3,20 +3,34 @@
 <?link rel="shortcut icon" type="image/x-icon" href="/images/emoji.png"?>
 <?meta charset="UTF-8" name="background layout page"?>
 <zk xmlns="http://www.zkoss.org/2005/zul">
-	<window id="indexWindow" border="none" width="100%" height="100%"
-		sizable="false" style="background-color: #7ac8ff45;">
+	<style>
+		.shutter-cloth { height: 100%; width: 100%; position: relative;
+		overflow: hidden; background-color: red; }
 
+		.shutter-cloth::before { content: ""; position: absolute; top:
+		0; left: 0; height: 100%; width: 100%; background:
+		linear-gradient(to bottom, red 100%, transparent);
+		animation: curtain-open 6s reverse forwards; z-index: 1; }
+
+		@keyframes curtain-open { 0% { transform: translateY(-100%); } 100% {
+		transform: translateY(0); } }
+
+		.custom-background { background-repeat: no-repeat;
+		background-size: cover; background-position: center center; }
+	</style>
+	<window id="indexWindow" border="none" width="100%" height="100%"
+		sizable="false">
 		<borderlayout height="100%">
-			<north height="60px" border="none" style="background-color: #113b54;">
+			<north height="60px" border="none"
+				style="background-color: #113b54;">
 				<div>
 					<hbox pack="stretch" width="100%">
 						<div align="left">
 							<image src="images/emoji.png" height="40px" />
 						</div>
 						<div align="center">
-							<label
-								value="Pentakota Pranay Kiran Varaha Adhitya Venkata Mani Raghu Ram Nooka Vinay Maruti Nandhan"
-								style="font-weight: bold;color: #ffa516; font-size: larger;" />
+							<label value="Birthday Invitation"
+								style="font-weight: bold; color: #fed900; font-style: italic; font-size: -webkit-xxx-large; font-family: ui-monospace;" />
 						</div>
 						<div align="right">
 							<label value="SPY"
@@ -36,7 +50,7 @@
 			</south>
 			<west size="180px" border="none">
 				<div>
-					<image src="images/leftEmoji.png" height="340px" />
+ 						<image src="images/leftEmoji.png" height="340px" />
 				</div>
 			</west>
 			<east size="200px" border="none">
@@ -45,9 +59,24 @@
 				</div>
 			</east>
 			<center border="none" autoscroll="false">
-				<div>
-					<groupbox mold="3d">
-					</groupbox>
+				<div class="custom-background shutter-cloth"
+					style="background-color: #f4f9ff; padding: 20px; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+					<label value="You're Invited!"
+						style="font-size: 36px; font-weight: bold; color: #113b54; margin-top: 10px;" />
+					<label
+						value="Join us to celebrate the 1st birthday of "
+						style="font-size: 24px; color: #113b54;" />
+					<label
+						value="Mr Pranay Kiran Varaha Adhitya Venkata Mani Raghu Ram Nooka Vinay Maruti Nandhan"
+						style="font-size: 28px; font-weight: bold; color: #ffa516; margin-top: 20px;" />
+					<label value="Date: [Your Son's Birthday Date]"
+						style="font-size: 20px; color: #113b54; margin-top: 15px;" />
+					<label value="Time: [Start Time] - [End Time]"
+						style="font-size: 20px; color: #113b54;" />
+					<label value="Location: [Venue Name, Address]"
+						style="font-size: 20px; color: #113b54;" />
+					<label value="RSVP: [Your Contact Information]"
+						style="font-size: 20px; color: #113b54; margin-bottom: 20px;" />
 				</div>
 			</center>
 		</borderlayout>
