--- a/web/src/main/webapp/pranay.zul
+++ b/web/src/main/webapp/pranay.zul
@@ -5,15 +5,16 @@
 <zk xmlns="http://www.zkoss.org/2005/zul">
 	<style>
 		.shutter-cloth { height: 100%; width: 100%; position: relative;
-		overflow: hidden; background-color: red; }
+		overflow: hidden; }
 
 		.shutter-cloth::before { content: ""; position: absolute; top:
-		0; left: 0; height: 100%; width: 100%; background:
-		linear-gradient(to bottom, red 100%, transparent);
-		animation: curtain-open 6s reverse forwards; z-index: 1; }
+		-100px; left: 0; height: 210%; width: 100%; background-image:
+		url("images/curtain.png"); background-size: cover;
+		background-position: center center; animation: curtain-open 20s
+		reverse forwards; z-index: 1; }
 
-		@keyframes curtain-open { 0% { transform: translateY(-100%); } 100% {
-		transform: translateY(0); } }
+		@keyframes curtain-open { 0% { transform: translateY(-100%); }
+		100% { transform: translateY(0); } }
 
 		.custom-background { background-repeat: no-repeat;
 		background-size: cover; background-position: center center; }
@@ -21,7 +22,7 @@
 	<window id="indexWindow" border="none" width="100%" height="100%"
 		sizable="false">
 		<borderlayout height="100%">
-			<north height="60px" border="none"
+			<north height="70px" border="none"
 				style="background-color: #113b54;">
 				<div>
 					<hbox pack="stretch" width="100%">
@@ -43,14 +44,14 @@
 				<div align="center">
 					<hlayout>
 						<label
-							value="Copyright © 2023 Spy Innovations. All rights reserved." />
+							value="Copyright © 2023 Spy Innovations.All rights reserved." />
 						<a iconSclass="z-icon-info-circle" />
 					</hlayout>
 				</div>
 			</south>
-			<west size="180px" border="none">
+			<west size="200px" border="none">
 				<div>
- 						<image src="images/leftEmoji.png" height="340px" />
+					<image src="images/leftEmoji.png" height="340px" />
 				</div>
 			</west>
 			<east size="200px" border="none">
