--- a/web/src/main/webapp/pranay.zul
+++ b/web/src/main/webapp/pranay.zul
@@ -1,28 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?page id="index" title="SPY" contentType="text/html;charset=UTF-8" cacheable="false" language="xul/html"?>
 <?link rel="shortcut icon" type="image/x-icon" href="/images/emoji.png"?>
-<?meta charset="UTF-8" name="background layout page"?>
+<?meta charset="UTF-8" name="viewport" content="width=1024, initial-scale=1, maximum-scale=1"?>
 <zk xmlns="http://www.zkoss.org/2005/zul">
 	<style>
-		.shutter-cloth { height: 100%; width: 100%; position: relative;
-		overflow: hidden; }
+		.shutter-cloth { height: 100%; width: 100%; position: relative; overflow: hidden; }
 
 		.shutter-cloth::before { content: ""; position: absolute; top:
-		-100px; left: 0; height: 210%; width: 100%; background-image:
-		url("images/curtain.png"); background-size: cover;
-		background-position: center center; animation: curtain-open 20s
+		0%; left: 0; height: 100%; width: 100%; background-image:
+		url("images/ccloth.png"); background-size: cover;
+		background-position: center center; animation: curtain-open 6s
 		reverse forwards; z-index: 1; }
 
-		@keyframes curtain-open { 0% { transform: translateY(-100%); }
+		@keyframes curtain-open { 10% { transform: translateY(-100%); }
 		100% { transform: translateY(0); } }
 
 		.custom-background { background-repeat: no-repeat;
-		background-size: cover; background-position: center center; }
+		background-size: 100% 100%; background-position: center center;
+		background-image: url("images/pgif.gif"); }
+
 	</style>
 	<window id="indexWindow" border="none" width="100%" height="100%"
 		sizable="false">
 		<borderlayout height="100%">
-			<north height="70px" border="none"
+			<north height="8%" border="none"
 				style="background-color: #113b54;">
 				<div>
 					<hbox pack="stretch" width="100%">
@@ -40,7 +41,7 @@
 					</hbox>
 				</div>
 			</north>
-			<south height="60px" border="none">
+			<south height="30%" border="none">
 				<div align="center">
 					<hlayout>
 						<label
@@ -49,35 +50,35 @@
 					</hlayout>
 				</div>
 			</south>
-			<west size="200px" border="none">
+			<west size="10%" border="none">
 				<div>
-					<image src="images/leftEmoji.png" height="340px" />
+					<image src="images/leftEmoji.png" width="100%" />
+					<image src="images/leftEmoji.png" width="100%" />
+					<image src="images/leftEmoji.png" width="100%" />
+					<image src="images/leftEmoji.png" width="100%" />
+					<image src="images/leftEmoji.png" width="100%" />
+					<image src="images/leftEmoji.png" width="100%" />
+					<image src="images/leftEmoji.png" width="100%" />
+					<image src="images/leftEmoji.png" width="100%" />
+					<image src="images/leftEmoji.png" width="100%" />
 				</div>
 			</west>
-			<east size="200px" border="none">
+			<east size="10%" border="none">
 				<div>
-					<image src="images/rightEmoji.png" height="340px" />
+					<image src="images/rightEmoji.png" width="100%" />
+					<image src="images/rightEmoji.png" width="100%" />
+					<image src="images/rightEmoji.png" width="100%" />
+					<image src="images/rightEmoji.png" width="100%" />
+					<image src="images/rightEmoji.png" width="100%" />
+					<image src="images/rightEmoji.png" width="100%" />
+					<image src="images/rightEmoji.png" width="100%" />
+					<image src="images/rightEmoji.png" width="100%" />
+					<image src="images/rightEmoji.png" width="100%" />
 				</div>
 			</east>
-			<center border="none" autoscroll="false">
+			<center border="none" autoscroll="true">
 				<div class="custom-background shutter-cloth"
 					style="background-color: #f4f9ff; padding: 20px; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
-					<label value="You're Invited!"
-						style="font-size: 36px; font-weight: bold; color: #113b54; margin-top: 10px;" />
-					<label
-						value="Join us to celebrate the 1st birthday of "
-						style="font-size: 24px; color: #113b54;" />
-					<label
-						value="Mr Pranay Kiran Varaha Adhitya Venkata Mani Raghu Ram Nooka Vinay Maruti Nandhan"
-						style="font-size: 28px; font-weight: bold; color: #ffa516; margin-top: 20px;" />
-					<label value="Date: [Your Son's Birthday Date]"
-						style="font-size: 20px; color: #113b54; margin-top: 15px;" />
-					<label value="Time: [Start Time] - [End Time]"
-						style="font-size: 20px; color: #113b54;" />
-					<label value="Location: [Venue Name, Address]"
-						style="font-size: 20px; color: #113b54;" />
-					<label value="RSVP: [Your Contact Information]"
-						style="font-size: 20px; color: #113b54; margin-bottom: 20px;" />
 				</div>
 			</center>
 		</borderlayout>
