--- a/web/src/main/webapp/pranay.zul
+++ b/web/src/main/webapp/pranay.zul
@@ -10,7 +10,7 @@
 		.shutter-cloth::before { content: ""; position: absolute; top:
 		0%; left: 0; height: 100%; width: 100%; background-image:
 		url("images/ccloth.png"); background-size: cover;
-		background-position: center center; animation: curtain-open 15s
+		background-position: center center; animation: curtain-open 12s
 		reverse forwards; z-index: 1; }
 
 		@keyframes curtain-open { 0% { transform: translateY(-100%); }
@@ -20,6 +20,29 @@
 		background-size: 100% 100%; background-position: center center;
 		background-image: url("images/pgif.gif"); }
 
+		@keyframes slide-in2 { 0% { right: -100%; transform:
+		translateX(0); } 100% { right: 40%; transform: translateX(50%);
+		} }
+
+		@keyframes slide-in1 { 0% { left: -100%; transform:
+		translateX(0); } 100% { left: 41%; transform: translateX(-50%);
+		} }
+
+		.animated-label1 { position: absolute; transform:
+		translate(-50%, -50%); bottom: 0; left: -100%; font-family:
+		fantasy; letter-spacing: 5px; font-size: 38px; font-weight:
+		bold; background-image: linear-gradient( to right, #f6e27a 0,
+		#cb9b51 22%, #f6e27a 45%, #f6f2c0 50%, #f6e27a 55%, #f6e27a 78%,
+		#cb9b51 100% ); color: transparent; -webkit-background-clip:
+		text; animation: slide-in1 2s forwards;}
+
+		.animated-label2 { position: absolute; transform:
+		translate(-50%, -50%); bottom: 0; left: -100%; font-family:
+		fantasy; letter-spacing: 5px; font-size: 38px; font-weight:
+		bold; background-image: linear-gradient( to right, #f6e27a 0,
+		#cb9b51 22%, #f6e27a 45%, #f6f2c0 50%, #f6e27a 55%, #f6e27a 78%,
+		#cb9b51 100% ); color: transparent; -webkit-background-clip:
+		text; animation: slide-in2 2s forwards;}
 	</style>
 	<window id="indexWindow" border="none" width="100%" height="100%"
 		sizable="true">
@@ -30,12 +53,19 @@
 					<hbox pack="stretch" width="100%">
 						<div align="left">
 							<image src="images/flowers.png"
-								height="140px" />
+								height="140px" style="margin-top: -20px;" />
 						</div>
-						<div align="center">
-							<label id="kiran"
-								value="Pranay Kiran Birthday Invitation"
-								style="color: white;font-style: italic;font-weight: bold;font-size:50px" />
+						<div align="center" class="label-container">
+							<div>
+								<label value="Birthday Invitation"
+									style="color: white; font-style: italic; font-weight: bold; font-size:60px;font-family: fantasy;" />
+								<div>
+									<label value="Pranay"
+										class="animated-label1" />
+									<label value="Kiran"
+										class="animated-label2" />
+								</div>
+							</div>
 						</div>
 						<div align="right">
 							<image src="images/gold1.png"
